--- a/.github/workflows/deploy-slides.yml
+++ b/.github/workflows/deploy-slides.yml
@@ -25,6 +25,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.2
       - name: Install
         working-directory: slides
         run: pnpm install
