--- a/package.json
+++ b/package.json
@@ -4,5 +4,16 @@
   "description": "",
   "main": "index.js",
   "author": "Aprad Gabor",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "sst": "ion"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/aws-lambda": "8.10.142",
+    "@types/node": "^22.0.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "typescript": "^5.5.4"
+  }
 }
