--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "author": "Aprad Gabor",
   "license": "MIT",
   "dependencies": {
-    "sst": "ion"
+    "sst": "0.1.111"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/aws-lambda": "8.10.142",
-    "@types/node": "^22.0.0",
+    "@types/node": "20.14.15",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "0.6.6",
     "typescript": "^5.5.4"
   }
 }
