--- a/www/package.json
+++ b/www/package.json
@@ -10,17 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^2.13.2",
-    "@nuxt/fonts": "^0.7.1",
-    "@nuxt/icon": "^1.3.1",
-    "@nuxtjs/color-mode": "^3.4.2",
-    "@nuxtjs/seo": "2.0.0-rc.16",
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "@vueuse/nuxt": "^10.11.0",
+    "@nuxt/content": "2.13.2",
+    "@nuxt/fonts": "0.7.2",
+    "@nuxt/icon": "1.4.5",
+    "@nuxtjs/color-mode": "3.4.4",
+    "@nuxtjs/seo": "2.0.0-rc.18",
+    "@nuxtjs/tailwindcss": "6.12.1",
+    "@vueuse/nuxt": "11.0.0",
     "nuxt": "^3.12.4",
+    "nuxt-content-twoslash": "^0.1.1",
     "vue": "latest"
   },
   "devDependencies": {
-    "@iconify-json/ph": "^1.1.13"
+    "@iconify-json/ph": "1.1.14"
   }
 }
